build: fix dockerfile and publish workflow

--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,4 +29,4 @@ jobs:
           context: .
           file: ./Dockerfile
           push: true
-          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fgiafg-scraper-web:latest
+          tags: ${{ secrets.DOCKERHUB_USERNAME }}/fgiafg-web:latest
